# api-example

./: .bazelrc  BUILD.bazel  Dockerfile  MODULE.bazel  Program.cs  api-example.sln  api.csproj  api.http  api.sln  appsettings.Development.json  clean.sh  paket.dependencies  paket.main.bzl  paket.references
Features/: BUILD.bazel  Cqrs.cs  features.csproj
Features/Application/: Cqrs.cs
Features/Auth/: BUILD.bazel
Features/Auth/Application/: AuthHandler.cs
Features/Auth/Domain/: Auth.cs  AuthResult.cs
Features/Auth/Domain/Command/: IAuthUserCommand.cs
Features/Auth/Handlers/: AuthHandler.cs
Features/Auth/Infra/: AuthUserCommand.cs
Features/Comments/: BUILD.bazel  CommentsModule.cs  comments.csproj
Features/Comments/Application/Commands/: AddCommentHandler.cs
Features/Comments/Application/Query/: GetAllCommentsHandler.cs  GetCommentByIdHandler.cs  GetCommentsByPostIdHandler.cs
Features/Comments/Domain/: Comment.cs  ICommentRepository.cs
Features/Comments/Infra/Domain/: CommentRepository.cs
Features/Core/: BUILD.bazel  core.csproj
Features/Cqrs/: BUILD.bazel
Features/Publications/: BUILD.bazel  PublicationsModule.cs
Features/Publications/Application/: AddPublicationHandler.cs  PublicationsHandler.cs
Features/Publications/Application/Commands/: AddPublicationHandler.cs  RemovePublicationHandler.cs  UpdatePublicationHandler.cs
Features/Publications/Domain/: IPublicationRepository.cs  Publication.cs
Features/Publications/Domain/Commands/: IAddPublicationCommand.cs  IRemovePublicationCommand.cs
Features/Publications/Domain/Queries/: IGetPublicationByIdQuery.cs  IGetPublicationsQuery.cs
Features/Publications/Handlers/: AddPublicationHandler.cs  RemovePublicationHandler.cs
Features/Publications/Infra/Commands/: AddPublicationCommand.cs  RemovePublicationCommand.cs
Features/Publications/Infra/Data/: PublicationsContext.cs
Features/Publications/Infra/Domain/: PublicationRepository.cs
Features/Publications/UseCases/: AddPublicationHandler.cs  RemovePublicationHandler.cs
Features/Users/: BUILD.bazel  UsersModule.cs  users.csproj
Features/Users/Application/: ListAllUsersUseCase.cs  ListUsersUseCase.cs  UsersHandlers.cs
Features/Users/Application/Queries/: GetAllUsersQuery.cs  GetUserByIdHandler.cs
Features/Users/Domain/: IUserRepository.cs  User.cs
Features/Users/Domain/Query/: IGetUserBydIdQuery.cs  IGetUsersQuery.cs
Features/Users/Handlers/: ListAllUsers.cs  ListUsers.cs
Features/Users/Infra/Domain/: UserRepository.cs
Features/Users/Infra/Queries/: GetUserByIdQuery.cs  GetUsersQuery.cs
Properties/: launchSettings.json
src/: BUILD.bazel  Program.cs
src/Features/: BUILD.bazel
