load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_binary",
    "publish_binary",
)

csharp_binary(
    name = "binary",
    srcs = ["Program.cs"],
    target_frameworks = ["net9.0"],
    project_sdk = "web",
    deps = [
        "//Features:features"
    ],
    data = [
        "//Features:features"
    ],
    run_analyzers = False
)
