load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_binary",
    "publish_binary",
)

csharp_binary(
    name = "binary",
    srcs = ["Program.cs"],
    target_frameworks = ["net9.0"],
    project_sdk = "web",
    deps = [
        "//Features:features",
        "@paket.main//microsoft.aspnetcore.openapi",
        "@paket.main//microsoft.openapi",
        "@paket.main//microsoft.entityframeworkcore.inmemory",
        "@paket.main//microsoft.aspnetcore.authentication.jwtbearer",
        "@paket.main//microsoft.identitymodel.tokens",
        "@paket.main//swashbuckle.aspnetcore.swaggerui",
       
    ],
    run_analyzers = False
)
