load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_library",
)

csharp_library(
    name = "features",
    target_frameworks = ["net9.0"],
    visibility = ["//visibility:public"],
    deps = [
        "//Features/Users:users",
    ],
    exports = [
        "//Features/Users:users",
    ],
    run_analyzers = False
)
