load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_library",
)

csharp_library(
    name = "features",
    target_frameworks = ["net9.0"],
    visibility = ["//visibility:public"],
    deps = [
        "//Features/Users:users",
        "//Features/Publications:publications",
        "//Features/Auth:auth",
        "//Features/Comments:comments",
        "//Features/Core:core",
    ],
    exports = [
        "//Features/Auth:auth",
        "//Features/Users:users",
        "//Features/Publications:publications",
        "//Features/Comments:comments",
        "//Features/Core:core",
    ],
    run_analyzers = False
)
