load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_library",
)

csharp_library(
    name = "auth",
    srcs = glob(["**/*.cs"]),
    deps = [
        "@paket.main//microsoft.extensions.configuration",
    ],
    target_frameworks = ["net9.0"],
    visibility = ["//visibility:public"],
    run_analyzers = False
)
