load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_library",
)

csharp_library(
    name = "auth",
    srcs = glob(["**/*.cs"]),
    deps = [
        "@paket.main//system.identitymodel.tokens.jwt",
        "@paket.main//microsoft.identitymodel.tokens"
    ],
    target_frameworks = ["net9.0"],
    visibility = ["//visibility:public"],
    run_analyzers = False
)
