load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_library",
)

csharp_library(
    name = "comments",
    srcs = glob(["**/*.cs"]),
    target_frameworks = ["net9.0"],
    visibility = ["//visibility:public"],
    deps = [
        "//Features/Core:core",
        "@paket.main//microsoft.extensions.dependencyinjection.abstractions",
    ],
    run_analyzers = False
)
