load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_library",
)

csharp_library(
    name = "publications",
    srcs = glob(["**/*.cs"]),
    target_frameworks = ["net9.0"],
    visibility = ["//visibility:public"],
    deps = [ 
        "//Features/Cqrs:cqrs",
    ],
    run_analyzers = False
)
