load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_library",
)

csharp_library(
    name = "publications",
    srcs = glob(["**/*.cs"]),
    target_frameworks = ["net9.0"],
    visibility = ["//visibility:public"],
    deps = [ 
        "@paket.main//microsoft.extensions.dependencyinjection.abstractions",
        "@paket.main//microsoft.entityframeworkcore",
        "@paket.main//microsoft.entityframeworkcore.inmemory",
        "//Features/Core:core",
    ],
    run_analyzers = False
)
