load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_library",
)

csharp_library(
    name = "users",
    srcs = glob(["**/*.cs"]),
    target_frameworks = ["net9.0"],
    visibility = ["//visibility:public"],
    deps = [
        "@paket.main//microsoft.extensions.dependencyinjection.abstractions",
        "//Features/Core:core",
    ],
    run_analyzers = False
)
