load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_library",
)

csharp_library(
    name = "features",
    target_frameworks = ["net9.0"],
    visibility = ["//visibility:public"],
    deps = [
        "//api-example/src/Features/Users:users"
    ],
    exports = [
        "//api-example/src/Features/Users:users",
    ],
    run_analyzers = False
)
